# sample-apps

dog/: Cargo.toml  Dioxus.toml
dog/src/: main.rs
dog/src/components/: card.rs  dog.rs  mod.rs
dog/src/models/: dog.rs
ecomm/: Cargo.toml  Dioxus.toml
ecomm/assets/: loading.css  tailwind.css
ecomm/src/: enums.rs  main.rs
ecomm/src/components/: error.rs  icon.rs  item.rs  loading.rs  mod.rs  nav.rs  page.rs
ecomm/src/models/: cart.rs  mod.rs  product.rs  rating.rs  user.rs
ecomm/src/services/: api.rs  mod.rs
ecomm/src/views/: details.rs  home.rs  mod.rs
fs-auth/: Cargo.toml  Dioxus.toml
fs-auth/src/: lib.rs  main.rs
fs-auth/src/models/: mod.rs  user.rs
fs-auth/src/repos/: database.rs
fs-auth/src/views/: blog.rs  mod.rs
fs-hackernews/: Cargo.toml  Dioxus.toml
fs-hackernews/src/: main.rs
fs-hackernews/src/components/: child_or_load.rs  comment.rs  home.rs  listing.rs  loading.rs  mod.rs  preview.rs  stories.rs
fs-hackernews/src/models/: comment.rs  mod.rs  page.rs  state.rs
fs-hackernews/src/services/: hackernews.rs  mod.rs
fs-helloworld/: Cargo.toml  Dioxus.toml
fs-helloworld/src/: lib.rs  main.rs  route.rs
fs-helloworld/src/components/: counter.rs  mod.rs
fs-helloworld/src/services/: mod.rs  server.rs
fs-helloworld/src/views/: home.rs
helloworld/: Cargo.toml  Dioxus.toml
helloworld/src/: main.rs  route.rs
helloworld/src/components/: blog.rs  echo.rs  hero.rs  home.rs  mod.rs
helloworld/src/services/: echo.rs
imggen/: Cargo.toml  Dioxus.toml
imggen/src/: main.rs
imggen/src/components/: image.rs  input.rs  mod.rs  view.rs
imggen/src/models/: image.rs
imggen/src/services/: image.rs
ssr-functions/: Cargo.toml  Dioxus.toml
ssr-functions/src/: main.rs
ssr-helloworld/: Cargo.toml  Dioxus.toml  README.md
ssr-helloworld/src/: main.rs
ssr-sse/: Cargo.toml  Dioxus.toml
ssr-sse/src/: main.rs
todo/: Cargo.toml
todo/src/: main.rs
todo/src/components/: entry.rs  footer.rs  header.rs  mod.rs  todo.rs
todo/src/models/: todo.rs
weather/: Cargo.toml  Dioxus.toml  Makefile
weather/src/: lib.rs  main.rs  route.rs
weather/src/components/: countrydata.rs  forecast.rs  home.rs  mapicon.rs  mod.rs  navbar.rs  searchbox.rs  weather.rs
weather/src/models/: weather.rs
weather/src/services/: weather.rs
xplorer/: Cargo.toml  Dioxus.toml
xplorer/src/: main.rs
xplorer/src/components/: header.rs  main.rs
xplorer/src/models/: file.rs
